--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -157,7 +157,8 @@ header.masthead {
   header.masthead .post-heading,
   header.masthead .site-heading {
     padding: 200px 0 150px;
-    color: white; }
+    color: white; 
+    text-shadow: 2px 2px 4px #000000;}
     @media only screen and (min-width: 768px) {
       header.masthead .page-heading,
       header.masthead .post-heading,
