--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -158,7 +158,7 @@ header.masthead {
   header.masthead .site-heading {
     padding: 200px 0 150px;
     color: white; 
-    text-shadow: 10px 10px 0px #000000;}
+    text-shadow: 10px 10px 10px black;}
     @media only screen and (min-width: 768px) {
       header.masthead .page-heading,
       header.masthead .post-heading,
