--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -157,7 +157,7 @@ header.masthead {
   header.masthead .post-heading,
   header.masthead .site-heading {
     padding: 200px 0 150px;
-    color: white; 
+    color: red;
     text-shadow: 10px 10px 10px black;}
     @media only screen and (min-width: 768px) {
       header.masthead .page-heading,
