--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -19,8 +19,9 @@ header.masthead {
   .site-heading {
     text-align: center;
     h1 {
-      font-size: 50px;
+      font-size: 40px;
       margin-top: 0;
+      text-shadow: 10px 10px #ff0000;
     }
     .subheading {
       font-size: 24px;
