--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -19,9 +19,9 @@ header.masthead {
   .site-heading {
     text-align: center;
     h1 {
-      font-size: 100px;
+      font-size: 50px;
       margin-top: 0;
-      text-shadow: 10px 10px #ff0000;
+      text-shadow: 10px 10px black;
     }
     .subheading {
       font-size: 24px;
