--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -10,7 +10,7 @@ header.masthead {
   .post-heading,
   .site-heading {
     padding: 200px 0 150px;
-    color: white;
+    color: black;
     @media only screen and (min-width: 768px) {
       padding: 200px 0;
     }
