--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -10,7 +10,7 @@ header.masthead {
   .post-heading,
   .site-heading {
     padding: 200px 0 150px;
-    color: black;
+    color: white;
     @media only screen and (min-width: 768px) {
       padding: 200px 0;
     }
@@ -19,7 +19,7 @@ header.masthead {
   .site-heading {
     text-align: center;
     h1 {
-      font-size: 50px;
+      font-size: 80px;
       margin-top: 0;
     }
     .subheading {
