--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -1,28 +1,16 @@
-// Bootstrap overrides for this template
-.btn {
-  font-size: 14px;
-  font-weight: 800;
-  padding: 15px 25px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  border-radius: 0;
-  @include sans-serif-font;
+.bg-primary {
+  background-color: $primary !important;
 }
 
-.btn-primary {
-  @include button-variant(white, $theme-primary, $theme-primary);
+.text-primary {
+  color: $primary !important;
 }
 
-.btn-lg {
-  font-size: 16px;
-  padding: 25px 35px;
-}
-
-.btn-default {
+a {
+  color: $primary;
+  &:hover,
   &:focus,
-  &:hover {
-    color: white;
-    border: 1px solid $theme-primary;
-    background-color: $theme-primary;
+  &:active {
+    color: darken($primary, 15%);
   }
 }
