--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,15 +1,14 @@
 // Global styling for this template
-body {
-  font-size: 20px;
-  color: $gray-dark;
-  @include serif-font;
-}
 
-p {
-  line-height: 1.5;
-  margin: 30px 0;
-  a {
-    text-decoration: underline;
+body {
+  @include body-font;
+  padding-top: 54px;
+  color: $gray-600;
+}
+@media (min-width: 992px) {
+  body {
+    padding-top: 0;
+    padding-left: $sidebar-base-width;
   }
 }
 
@@ -19,70 +18,45 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 800;
-  @include sans-serif-font;
-}
-
-a {
-  color: $gray-dark;
-  @include transition-all;
-  &:focus,
-  &:hover {
-    color: $theme-primary;
-  }
-}
-
-a img {
-  &:focus,
-  &:hover {
-    cursor: zoom-in;
-  }
-}
-
-blockquote {
-  font-style: italic;
-  color: $gray-light;
-}
-
-.section-heading {
-  font-size: 36px;
+  @include heading-font;
   font-weight: 700;
-  margin-top: 60px;
+  text-transform: uppercase;
+  color: $gray-800;
 }
 
-.caption {
-  font-size: 14px;
-  font-style: italic;
-  display: block;
-  margin: 0;
-  padding: 10px;
-  text-align: center;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
+h1 {
+  font-size: 6rem;
+  line-height: 5.5rem;
 }
 
-::-moz-selection {
-  color: white;
-  background: $theme-primary;
-  text-shadow: none;
+h2 {
+  font-size: 3.5rem;
 }
 
-::selection {
-  color: white;
-  background: $theme-primary;
-  text-shadow: none;
+.subheading {
+  text-transform: uppercase;
+  font-weight: 500;
+  @include heading-font;
+  font-size: 1.35rem;
 }
 
-img::selection {
-  color: white;
-  background: transparent;
+.list-social-icons {
+  a {
+    color: $gray-700;
+    &:hover {
+      color: $primary;
+    }
+    .fa-lg {
+      font-size: 1.75rem;
+    }
+  }
 }
 
-img::-moz-selection {
-  color: white;
-  background: transparent;
-}
-
-body {
-  -webkit-tap-highlight-color: $theme-primary;
+.list-icons {
+  font-size: 3rem;
+  .list-inline-item i {
+    &:hover {
+      color: $primary;
+    }
+  }
 }
